--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
     background: var(--color-black);
+    
 
     padding: 1rem 2rem;
 }
@@ -16,6 +17,10 @@
 
 .app__navbar-logo img{
     width: 150px;
+    height:100px;
+    margin:20px;
+    border-radius: 40px;
+   
 }
 
 .app__navbar-links{
@@ -101,7 +106,7 @@
 
     @media screen and (max-width:2000px){
         .app__navbar-logo img{
-            width:210px;
+            width:250px;
         }
 
     }
